# air-lab-os

./: .gitignore  AGENTS.md  CLAUDE.md  PHASE2_SPEC.md  PHASE3_SPEC_Dashboard+SSE.md  README.md  SPEC.md  SPEC_2.md  SPEC_3.md  SPEC_PRIMARY_METRIC.md  lab_notes.md  main.py  pyproject.toml  scoring_policy.yaml
architecture/: RSI.md  SignaldiscoveryEngine.drawio  air_lab_os_architecture.html  air_lab_os_generic_boundaries.html
artifacts/: gold_feature_set_v1_mappings.pkl
core/: arena.py  dataset_loader.py  evaluation.py  experiment.py  loop.py  mode.py  promotion.py  registry.py
core/arena/: __init__.py  execution.py  exploration.py  ranking.py
dashboard/: __init__.py  feature_results.html  feature_results.py  server.py  ui.py
data/: generate_sample.py  sample_transactions.csv
datasets/: base.py  registry.py
evaluation/: evaluator.py  evaluator_legacy.py
execution/: evaluator.py
lab/: README.md  arena.py  detectors.py  learning_utils.py  playground.py
memory/: episodic.py  registry.py  registry_legacy.py  run_store.py
patterns/: README.md  base.py
patterns/scratch/: ml_logistic.py  rule_spike.py  rule_velocity.py
patterns/working/: erg_consistency_spike.py  erg_load_threshold.py  (+1 more)
runtime/: config.py  llm.py
scripts/: migrate_qualify.py  promote.py  run_lab.py
src/: registry.py
tests/: test_arena.py  test_core_arena.py  test_core_loop.py  test_core_plumbing.py  test_dashboard.py  test_evaluator.py  test_feature_dashboard.py  test_feature_experiment.py  test_playground.py  test_promotion.py  test_registry.py  test_runtime_llm.py
(+23 files in other folders)
